# CamLab

./: .gitignore  .gitmodules  CamLab.css  CamLab.desktop  CamLab.spec  LabJack Daughter Board Control.ods  Pipfile  PlotItem.ui  Settings-BUD-SKY-cal  Test.yaml  Test_Tim.yaml  axisCtrlTemplate.ui  exportTheme.py  junk  junk_2022-02-25_21:32:04_1.txt  main.py  main.spec  pyproject.toml  readDeviceName.py  readme.md  renameDevice.py  requirments.txt  set_T7_name.py  yaml_test.py
RPi_controls/: control_computer.py  raspberry_pi.py
camlab/: acquire.lua  delegates.py  device.py  devices.py  dialogs.py  manager.py  models.py  views.py  widgets.py
camlab/widgets/: CamLabToolBar.py  GlobalSettingsGroupBox.py  PlotWindow.py  StatusGroupBox.py  __init__.py
defaults/: base_default.yaml
src/: CamLab.css  GraphicsScene.py  acquire.lua  assembly.py  camera.py  config.py  delegates.py  device.py  dialogs.py  failsafe.lua  log.py  main.py  manager.py  models.py  old_dialogs.py  picoW_FHA.py  press.py  sequenceManager.py  timing.py  views.py
src/delegates/: CheckBoxDelegate.py  ColouredBackgroundDelegate.py  ComboBoxDelegate.py  ConnectionIconDelegate.py  DeviceIconDelegate.py  FloatValidatorDelegate.py  StatusIconDelegate.py  StringDelegate.py  __init__.py
src/dialogs/: BusyDialog.py  ColourPickerDialog.py  __init__.py
src/local_gxipy/: __init__.py  gxiapi.py
src/local_qt_material/: __init__.py
src/models/: AcquisitionTableModel.py  ChannelsTableModel.py  ColourPickerTableModel.py  CommandTreeModel.py  ControlTableModel.py  DeviceTableModel.py  __init__.py
(+81 files in other folders)
